[gd_scene load_steps=2 format=2]

[ext_resource path="res://essential/FirebaseManager.gd" type="Script" id=1]

[node name="FirebaseManager" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="PingTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="PingTimer" to="." method="_on_PingTimer_timeout"]
